Summary of important user-visible changes for mapping 1.2.0:
-------------------------------------------------------------------

 ** The function `distance' has been greatly improved with more options
    including calculating the azimuth between points and support different
    angle units.